Fix broken layout with narrow header width

--- a/static/css/mini.css
+++ b/static/css/mini.css
@@ -125,8 +125,7 @@ article h2 {
 
 article header {
   display: block;
-  height: 5rem;
-  margin-bottom: 5rem;
+  height: auto;
 }
 
 #article-list {
